--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "tortugas-en-el-tiempo",
   "version": "0.1.0",
   "private": true,
+  "prettier": {
+    "singleQuotes": false
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
